[package]
name = "handmade_hero"
version = "0.0.14"
authors = ["Nicholas Mazzuca <npmazzuca@gmail.com>"]

[lib]
name = "handmade_hero"
path = "src/lib.rs"

[[bin]]
name = "handmade_hero_bin"
path = "src/bin/main.rs"


[dependencies]
bitflags = "*"
sdl2 = "*"
sdl2-sys = "*"
libc = "*"

[profile.dev]
opt-level = 2
debug = true
